# auction-testnet-poc

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
client/src/: config.ts  instructions.ts  observability.ts  pdas.ts  program.ts  run.ts  scenarios.ts  summary.ts
docs/: 05-economics.md  06-observability.md  08-deploy-checklist.md
programs/axis-auction/: Cargo.toml
programs/axis-auction/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs
programs/axis-auction/src/instructions/: claim_or_record_auction_payment.rs  close_auction_select_winner.rs  create_mock_market.rs  execute_mock_settlement.rs  initialize_config.rs  mod.rs  open_auction_round.rs  submit_bid.rs
programs/axis-auction/src/state/: mod.rs
programs/axis-auction/tests/: t0_4_lifecycle.rs
scripts/: 01_init.ts  02_create_market.ts  03_open_round.ts  04_submit_bids.ts  05_close_select_winner.ts  06_execute_settlement.ts  07_record_payment.ts  08_fetch_auction_summary.ts  99_full_flow.ts
