[package]
name = "axis-auction"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "axis_auction"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "=0.31.1"
