[package]
name = "axis-auction"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "axis_auction"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "=0.31.1"

[dev-dependencies]
solana-program-test = "=2.2.1"
solana-sdk = "=2.2.1"
tokio = { version = "1.43", features = ["macros"] }
